Footer: Fix to work better on mobile

--- a/jennanddan/static/css/style.css
+++ b/jennanddan/static/css/style.css
@@ -1,11 +1,20 @@
 
 body {
-  margin-bottom: 40px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display:         flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+  height: 100%;
+}
+
+
+.content {
+  flex: 1 0 auto;
 }
 
 .base-font {
@@ -117,13 +126,18 @@ html {
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 40px;
-  line-height: 40px; /* Vertically center the text there */
+  padding-top: 15px;
+  padding-bottom: 10px;
   background-color: #f5f5f5;
+}
+
+.footer-credit {
+  padding-left: 15px;
+}
+
+.footer-help {
+  padding-right: 15px;
+  text-align: right;
 }
 
 .flex-display {
